spacing issue updated

--- a/assets/css/tutor-front.css
+++ b/assets/css/tutor-front.css
@@ -1692,7 +1692,7 @@ ul.tutor-required-fields{
 
 .tutor-star-rating-group {
     color: #f4c150;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     display: block;
 }
 .tutor-star-rating-group i{
